--- a/build
+++ b/build
@@ -12,14 +12,14 @@ run \
   && apt-get -y update \
   && apt-get -y install build-essential curl wget
 workdir /workdir
-copy ./github-get-latest .
+copy ./github-get .
 run \
   set -eu \
-  && ./github-get-latest https://github.com/richfelker/musl-cross-make \
+  && ./github-get https://github.com/richfelker/musl-cross-make \
   && echo 'TARGET=x86_64-linux-musl' >musl-cross-make/config.mak \
   && make -C musl-cross-make -j $(getconf _NPROCESSORS_ONLN) all \
   && make -C musl-cross-make install
-run ./github-get-latest https://github.com/landley/toybox
+run ./github-get https://github.com/landley/toybox
 run \
   set -euvx \
   && export CROSS_COMPILE="x86_64-linux-musl-" \
