--- a/build
+++ b/build
@@ -5,32 +5,4 @@
 here=$(dirname $(readlink -f ${0}))
 name=$(basename ${here})
 
-docker build -t${name} -f- ${here} <<EOF
-from ubuntu
-run \
-  set -euvx \
-  && apt-get -y update \
-  && apt-get -y install build-essential curl wget
-workdir /workdir
-copy ./github-get .
-run \
-  set -eu \
-  && ./github-get https://github.com/richfelker/musl-cross-make \
-  && echo 'TARGET=x86_64-linux-musl' >musl-cross-make/config.mak \
-  && make -C musl-cross-make -j $(getconf _NPROCESSORS_ONLN) all \
-  && make -C musl-cross-make install
-run ./github-get https://github.com/landley/toybox
-run \
-  set -euvx \
-  && export CROSS_COMPILE="x86_64-linux-musl-" \
-  && export PATH=/workdir/musl-cross-make/output/bin:${PATH} \
-  && export CFLAGS="--static" \
-  && export LDFLAGS="--static" \
-  && make -C toybox defconfig \
-  && make -C toybox -j $(getconf _NPROCESSORS_ONLN) all \
-  && PREFIX=/usr/local make -C toybox install
-run ls -lah toybox/
-run command -v toybox
-run toybox --help && toybox --long && exit 1
-EOF
-
+docker build -t${name} ${here}
